# tudelft-cv-aircraft-detection

./: .gitignore  data.yaml  requirements.txt  requirements3.11.txt  split.csv
aircraft_detection/yolov8n_finetune/: args.yaml
aircraft_detection/yolov8n_finetune2/: args.yaml
aircraft_detection/yolov8n_finetune3/: args.yaml
aircraft_detection/yolov8n_finetune4/: args.yaml  results.csv
aircraft_detection/yolov8n_finetune5/: args.yaml
aircraft_detection/yolov8n_finetune6/: args.yaml  results.csv
aircraft_detection/yolov8n_finetune7/: args.yaml
aircraft_detection/yolov8n_finetune8/: args.yaml
app/: adsb_example.json  analysis_options.yaml  pubspec.yaml
app/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
data_processing/: add_videos.py  convert_to_mp4.py  update_labeling_task.py
model/: model_investigate.py  test1.py
model_tests/: analyze_tflite.py  mock_yolov8n.py
scripts/: add_videos.py  adsb_overlay.py  combine_overlays.py  common.py  convert_to_mp4.py  count_labels.py  count_unique.py  cuda_test.py  cvat_to_yolo.py  cvat_to_yolo_interval.py  dataset_generation.py  display_video.py  eval_plots.ipynb  evaluation.py  extract_frame_video_plot_prediction.py  fiftyone_TEST.py  labeling_task.py  matched_overlays.py  plot_after_train.py  preview.py  preview_labels.py  preview_videos.py  render_labels.py  run_prediction.py  run_ultralytics_test.py  test_set_results.py  train_model.py  upload_labels_to_cvat.py  upload_to_cvat.py  verify_label_image.py
splits/: 25.csv  50.csv  75.csv
yolov8n_saved_model/: fingerprint.pb  metadata.yaml
(+147 files in other folders)
